--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,13 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/envriroment/enviroment.ts",
+                  "with": "src/envriroment/enviroment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
